# amr_example

amr_example_small_no_ROS/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
amr_example_small_no_ROS/doc/: Doxyfile
amr_example_small_no_ROS/include/: amr.hpp  amr_interface.hpp  amr_task_executors.hpp  amr_unit.hpp  basic_routines.hpp  basic_structs.hpp
amr_example_small_no_ROS/src/: amr_interface.cpp  amr_task_executors.cpp  amr_unit.cpp  basic_routines.cpp
amr_example_small_no_ROS/src/executables/: amr_main.cpp
amr_example_small_no_ROS/tests/: amr_tests.cpp  unit_tests.hpp
amr_example_small_no_ROS/tests/test_configuration/: products.yaml
amr_example_small_no_ROS/tests/test_orders/: orders_20201201.yaml  orders_20201202.yaml  orders_20201203.yaml  orders_20201204.yaml  orders_20201205.yaml
